src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__conversation_colored_roles.snap
---
source: src/frontend/tui/conversation_area.rs
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────────────────────────┐"
"│You:                                                                          │"
"│  Hello!                                                                      │"
"│                                                                              │"
"│Assistant:                                                                    │"
"│  Hi there!                                                                   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
