src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_config_entry.snap
---
source: src/frontend/tui/conversation_area.rs
assertion_line: 1124
expression: terminal.backend()
---
"  • backend: vertex                                         "
"  • compaction.max_context_window_len: 0                    "
"  • compaction.role: compaction                             "
"  • retry.initial_delay_ms: 1000                            "
"  • retry.max_delay_ms: 8000                                "
"  • retry.max_retries: 3                                    "
"  • retry.max_token_retries: 3                              "
"  • sessions_dir: /sessions                                 "
"  • tools.bash_allowlist: cat, ls, grep, find, head, tail,  "
"wc, tree                                                    "
"  • tools.bash_denylist: rm, wget, sudo, chmod, chown       "
"  • tools.confirmation: WriteOnly                           "
"  • tools.max_tool_iterations: 25                           "
"  • tools.max_tool_result_bytes: 65536                      "
"  • tools.sandbox_root: .                                   "
"  • vertex.model: claude-sonnet-4-20250514                  "
"  • vertex.project: my-project                              "
"  • vertex.region: us-east5                                 "
"  • vertex.vision: false                                    "
"                                                            "
