src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_empty_conversation.snap
---
source: src/frontend/tui/conversation_area.rs
expression: terminal.backend()
---
"                                                            "
"                                                            "
"                                                            "
"            █ █ █          █                                "
"            █ █ █       █ ███ █  █            █             "
"            █ █ █ █  █ █   █  ██    ██  █  █ █              "
"            █ █ █ █  █  █  █  █  █ █  █ █  █  █             "
"            █ █ █  ██  █   █  █  █  ██   ██  █              "
"              █ █                  ██   █                   "
"             █ █ █                █  █ █ █ █                "
"             █ █ █  ██  ███   ██   ███ ███ ██               "
"             █ █ █ █  █ █  █ █  █    █ █   █                "
"             █ █ █  ███ █  █  ███ ███   ██ █                "
"                                                            "
"            v0.7.0 — by Peter Vlasveld                      "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
