src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_indexed_tool_entries.snap
---
source: src/frontend/tui/conversation_area.rs
assertion_line: 1292
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────┐"
"│[Tool(1)]:                                                │"
"│  bash                                                    │"
"│  {"command": "ls"}                                       │"
"│                                                          │"
"│[Result(1)]:                                              │"
"│  file1.txt                                               │"
"│  file2.txt                                               │"
"│                                                          │"
"│[Tool(2)]:                                                │"
"│  bash                                                    │"
"│  {"command": "pwd"}                                      │"
"│                                                          │"
"│[Result(2)]:                                              │"
"│  /home/user                                              │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
