src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_intro_entry.snap
---
source: src/frontend/tui/conversation_area.rs
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────┐"
"│Info:                                                     │"
"│  # Illustrious Manager                                   │"
"│                                                          │"
"│  - backend: vertex                                       │"
"│  - sessions_dir: /sessions                               │"
"│  - tools.bash_allowlist: cat, ls, grep, find, head, tail,│"
"│wc, tree                                                  │"
"│  - tools.bash_denylist: rm, wget, sudo, chmod, chown     │"
"│  - tools.bash_timeout_secs: 120                          │"
"│  - tools.confirmation: WriteOnly                         │"
"│  - tools.max_tool_iterations: 25                         │"
"│  - tools.sandbox_root: .                                 │"
"│  - vertex.model: claude-sonnet-4-20250514                │"
"│  - vertex.project: my-project                            │"
"│  - vertex.region: us-east5                               │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
